# TMPName

./: README.md
front/: .clang-format  .clang-tidy  CMakeLists.txt
front/pakman/: CMakeLists.txt
front/pakman/inc/: downloader.hpp  gui.hpp
front/pakman/mock/: master.json
front/pakman/src/: downloader.cpp  gui.cpp  main.cpp
server/: .gitignore  Cargo.toml  Dockerfile  start_server.sh
server/repo/test/: metadata.json
server/src/: main.rs
server/src/routes/: get_metadata_all.rs  get_package_metadata.rs  index.rs  mod.rs
server/src/utils/: builder.rs  mod.rs  watcher.rs
server/templates/: index.md
server/wanted/: Cargo.toml
web/: index.html  t.html  t2.html  t4.html  t5.html  test.html
